# biedronka-analysis

./: .buildinfo  .gitignore  README.md  about.html  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: publish-book.yaml
_sources/: about.md
_sources/notebooks/: analysis.ipynb
docs/data/: metadata.md
notebooks/: LCZ_analysis.ipynb  analysis.html  analysis.ipynb
rstudion-t/: _config.yml  _toc.yml  about.md  index.md
rstudion-t/notebooks/: analysis.ipynb
